Fourth and subsequent vertex color / UV layers displayed black #60684

Closed
opened 2019-01-20 21:58:23 +01:00 by Marcelo Demian Gómez · 16 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: GeForce GTX 1070

Blender Version
Broken: 2.8 2019-01-19 b0dee09a6d
Worked: 2.79

Short description of error
After creating more than 3 vertex color layers on an object, the fourth and all of the following are displayed completely black.

Exact steps for others to reproduce the error

  1. Start blender with the default startup.
  2. Switch to Vertex Paint Mode.
  3. Open the "Object Data" Tab in the Properties Editor
  4. In the Vertex Colors Panel, add three more Vertex Color layers -> The fourth is displayed black.
**System Information** Operating system: Ubuntu 18.04 Graphics card: GeForce GTX 1070 **Blender Version** Broken: 2.8 2019-01-19 b0dee09a6d55 Worked: 2.79 **Short description of error** After creating more than 3 vertex color layers on an object, the fourth and all of the following are displayed completely black. **Exact steps for others to reproduce the error** 1) Start blender with the default startup. 2) Switch to Vertex Paint Mode. 3) Open the "Object Data" Tab in the Properties Editor 4) In the Vertex Colors Panel, add three more Vertex Color layers -> The fourth is displayed black.

Added subscriber: @MarceloGomez

Added subscriber: @MarceloGomez

#61223 was marked as duplicate of this issue

#61223 was marked as duplicate of this issue

#60797 was marked as duplicate of this issue

#60797 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Same is true for UVMaps (fourth one is also displayed 'blank')

Note it actually renders fine on F12 [the vertex color case, for UVs, the fourth also fails on F12 render]

Before digging deeper: @fclem: do you want me to dive deeper or is this one for you right away?

Same is true for UVMaps (fourth one is also displayed 'blank') Note it actually **renders** fine on F12 [the vertex color case, for UVs, the fourth also fails on F12 render] Before digging deeper: @fclem: do you want me to dive deeper or is this one for you right away?

@lichtwerk You can go ahead and dig deeper. That does not ring any bell from me.

@lichtwerk You can go ahead and dig deeper. That does not ring any bell from me.
Philipp Oeser self-assigned this 2019-01-21 16:02:48 +01:00
Member

OK, will do some checking...

OK, will do some checking...
Member

Added subscribers: @0rAngE, @WilliamReynish

Added subscribers: @0rAngE, @WilliamReynish
Philipp Oeser changed title from Fourth and subsequent vertex color layers displayed black to Fourth and subsequent vertex color / UV layers displayed black 2019-01-28 14:08:18 +01:00
Philipp Oeser removed their assignment 2019-02-01 14:04:45 +01:00
Clément Foucault was assigned by Philipp Oeser 2019-02-01 14:04:45 +01:00
Member

OK, this already turned into a major timesink for me, so I'm afraid I have to bounce this back to @fclem

But here are some findings (not sure if they are related though):

  • This was caused by the port to batch request (a68edaf11d). Prior to that, all layers displayed correctly.
  • I think I dont quite get the logic [here ]] (in conjunction with the alias [ https:*developer.blender.org/diffusion/B/browse/master/source/blender/draw/intern/draw_cache_impl_mesh.c$3228 | here ). For properly displaying vcol layers rdata->cd.layers.vcol_active is always decrementing to zero, not so for the "failing" ones...
  • also tried checking usages of mesh_cd_layers_type_merge and mesh_cd_layers_type_overlap in conjunction with local functions cd_lneeded[CD_MLOOPCOL] vs cache->cd_lneeded[CD_MLOOPCOL] but couldnt find anything suspicious there...

@fclem: mind taking over?

OK, this already turned into a major timesink for me, so I'm afraid I have to bounce this back to @fclem But here are some findings (not sure if they are related though): - This was caused by the port to batch request (a68edaf11d). Prior to that, all layers displayed correctly. - I think I dont quite get the logic [here ]] (in conjunction with the alias [[ https:*developer.blender.org/diffusion/B/browse/master/source/blender/draw/intern/draw_cache_impl_mesh.c$3228 | here ](https:*developer.blender.org/diffusion/B/browse/master/source/blender/draw/intern/draw_cache_impl_mesh.c$892)). For properly displaying vcol layers `rdata->cd.layers.vcol_active` is always decrementing to zero, not so for the "failing" ones... - also tried checking usages of `mesh_cd_layers_type_merge` and `mesh_cd_layers_type_overlap` in conjunction with local functions `cd_lneeded[CD_MLOOPCOL]` vs `cache->cd_lneeded[CD_MLOOPCOL]` but couldnt find anything suspicious there... @fclem: mind taking over?

taking this over

taking this over
Member

Added subscribers: @GabrielMoro, @JacquesLucke

Added subscribers: @GabrielMoro, @JacquesLucke

This issue was referenced by bd80393995

This issue was referenced by bd803939957555e9c22b096365238704f55f6b3e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks a lot!!! :) It's working now.

Thanks a lot!!! :) It's working now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60684
No description provided.