Fix T60684 Fourth and subsequent vertex color / UV layers displayed black